<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.ProductDetails">


    <ImageView
        android:layout_marginTop="3dp"
        android:id="@+id/productThumbnail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="9dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:id="@+id/productTitle"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="Title"
                android:maxLines="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:id="@+id/productDescription"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/description"
                android:maxLines="3"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:id="@+id/productPrice"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/price"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:id="@+id/productDiscountPercentage"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/discount_percentage"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:id="@+id/productRating"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/rating"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/productRatingBar"
                android:layout_gravity="start"
                android:numStars="5"
                android:stepSize="0.5"
                android:rating="2.5"
                android:isIndicator="false"
                android:progressTint="#03A9F4"
                android:progressBackgroundTint="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:id="@+id/productStock"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/stock"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:id="@+id/productBrand"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/brand"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:id="@+id/productCategory"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/category"
                />




        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_marginTop="3dp"
        android:id="@+id/productImage0"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:layout_marginTop="3dp"
        android:id="@+id/productImage1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:layout_marginTop="3dp"
        android:id="@+id/productImage2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:layout_marginTop="3dp"
        android:id="@+id/productImage3"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />


</LinearLayout>

</ScrollView>